# LinkUp

./: .gitignore  .travis.yml  LinkUp.sln  README.md
LinkUp.Arduino/: CRC16.cpp  CRC16.h  LinkUp.Arduino.sln  LinkUp.Arduino.vcxitems  LinkUp.cpp  LinkUp.h  LinkUpLogic.h  LinkUpRaw.cpp  LinkUpRaw.h
LinkUp.Arduino/Testing/: Testing.ino  Testing.vcxproj
LinkUp.Arduino/Testing/__vm/: Compile.vmps.xml  Configuration.Release.vmps.xml  Upload.vmps.xml
LinkUp.Net45/: LinkUp.Net45.csproj  LinkUpSerialPortConnector.cs
LinkUp.Net45/Properties/: AssemblyInfo.cs
LinkUp.Portable/: LinkUp.Portable.csproj  LinkUp.Portable.sln  packages.config
LinkUp.Portable/LinkUp.Portable/: LinkUp.Portable.csproj  LinkUp.cs  LinkUpPacket.cs
LinkUp.Portable/LinkUp.Portable/Properties/: AssemblyInfo.cs
LinkUp.Portable/Testing/LinkUp.Testing.dotnet/: Program.cs
LinkUp.Portable/Testing/LinkUp.Testing.dotnet/Properties/: AssemblyInfo.cs
LinkUp.Shared/: LinkUp.Shared.projitems  LinkUp.Shared.shproj  LinkUpBridge.cs  LinkUpConnector.cs  LinkUpConverter.cs  LinkUpPacket.cs  LinkUpSerialPortConnector.cs  LinkUpTcpConnector.cs
LinkUp.Shared/Logic/: LinkUpLabel.cs  LinkUpLabelType.cs  LinkUpLogic.cs  LinkUpNameRequest.cs  LinkUpNameResponse.cs  LinkUpNode.cs  LinkUpPrimitiveLabel.cs  LinkUpPropertySetResponse.cs  LinkUpSubNode.cs  LinkUpType.cs
LinkUp.Shared/Raw/: LinkUpConnector.cs  LinkUpConverter.cs  LinkUpMemoryConnector.cs  LinkUpSerialPortConnector.cs
Testing/LinkUp.Testing.Arduino/: Testing.ino  Testing.vcxproj  Testing.vcxproj.filters
Testing/LinkUp.Testing.Arduino/__vm/: .LinkUp.Testing.Arduino.vsarduino.h  .Testing.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Configuration.Release.vmps.xml  Upload.vmps.xml
Testing/LinkUp.Testing.Net45/: LinkUp.Testing.Net45.csproj  Program.cs
Testing/LinkUp.Testing.Net45.TestBrowser/: App.xaml  App.xaml.cs  LinkUp.Testing.Net45.TestBrowser.csproj  MainWindow.xaml  MainWindow.xaml.cs
Testing/LinkUp.Testing.Net45.TestBrowser/Properties/: Settings.Designer.cs
Testing/LinkUp.Testing.UnitTest/: LinkUp.Testing.UnitTest.csproj  MemoryConnectorTest.cs
Testing/LinkUp.Testing.dotnet/: Program.cs
src/: LinkUp.sln
src/LinkUp.Arduino/: LinkUp.Arduino.vcxitems  LinkUpLogic.cpp  LinkUpNode.cpp  LinkUpNode.h  LinkUpRaw.cpp  LinkUpRaw.h  Platform.h
src/LinkUp.CMake/LinkUp.CMake.TcpNode/: CMakeLists.txt
src/LinkUp.CMake/LinkUp.CMake.TcpNode/LinkUp/: CMakeLists.txt
src/LinkUp.CMake/LinkUp.CMake.TcpNode/LinkUp/src/: LinkUpNode.cpp  LinkUpRaw.cpp  Platform.h
src/LinkUp.CMake/LinkUp.CMake.TcpNode/lib/: LinkUp.lib
src/LinkUp.CMake/LinkUp.CMake.TcpNode/src/: main.cpp
src/LinkUp.CMake/LinkUp.CMake.TcpNode/src/socket/: Session.cpp  session.cpp  session.h
src/LinkUp.CMake/LinkUp.CMake.TcpNode/src/tcpserver/: TcpServer.cpp  TcpServer.h
src/LinkUp.Cpp/: AVLTree.h  AvlTree.cpp  CRC16.cpp  CRC16.h  LinkUp.Cpp.vcxitems  LinkUpEventLabel.cpp  LinkUpEventLabel.h  LinkUpLabel.cpp  LinkUpLabel.h  LinkUpLogic.h  LinkUpNode.cpp  LinkUpNode.h  LinkUpPropertyLabel.cpp  LinkUpPropertyLabel.h  LinkUpRaw.cpp  LinkUpRaw.h  LinkedList.cpp  Platform.h
src/LinkUp.Cs/: LinkUp.Cs.csproj
src/LinkUp.Cs/Datagram/: ARQProtocol.cs  Datagram.cs  DatagramProtocolDecorator.cs  IDatagramProtocol.cs
src/LinkUp.Cs/Node/: LinkUpEventLabel.cs  LinkUpFunctionLabel.cs  LinkUpLabel.cs  LinkUpLabelType.cs  LinkUpNode.cs  LinkUpPropertyLabel.cs  LinkUpPropertyType.cs  LinkUpSubNode.cs
src/LinkUp.Cs/Node/Logic/: LinkUpEventFireRequest.cs  LinkUpEventFireResponse.cs  LinkUpEventSubscribeRequest.cs  LinkUpEventSubscribeResponse.cs  LinkUpEventUnsubscribeRequest.cs  LinkUpEventUnsubscribeResponse.cs  LinkUpFunctionCallRequest.cs  LinkUpFunctionCallResponse.cs  LinkUpLogic.cs  LinkUpLogicType.cs  LinkUpNameRequest.cs  LinkUpNameResponse.cs  LinkUpPingRequest.cs  LinkUpPingResponse.cs  LinkUpPropertyGetRequest.cs  LinkUpPropertyGetResponse.cs  LinkUpPropertySetRequest.cs  LinkUpPropertySetResponse.cs
src/LinkUp.Cs/Raw/: BytesPerSecondCounter.cs  Connector.cs  Converter.cs  Datagram.cs  IDatagramProtocol.cs  LinkUpBytesPerSecondCounter.cs  LinkUpConnector.cs  LinkUpConverter.cs  LinkUpMemoryConnector.cs  LinkUpNamedPipeConnector.cs  LinkUpPacket.cs  LinkUpSerialPortConnector.cs  LinkUpTcpClientConnector.cs  LinkUpUdpConnector.cs  MemoryConnector.cs  NamedPipeConnector.cs  Packet.cs  SerialPortConnector.cs  TcpClientConnector.cs  UdpConnector.cs
src/LinkUp.DotnetCore/: LinkUp.DotnetCore.csproj
src/LinkUp.Net45/: LinkUp.Net45.csproj  LinkUp.Net48.csproj
src/LinkUp.Shared/: LinkUp.Shared.projitems
src/LinkUp.Shared/Logic/: LinkUpLabel.cs  LinkUpLogic.cs  LinkUpNameRequest.cs  LinkUpNode.cs  LinkUpPrimitiveLabel.cs  LinkUpPropertyGetRequest.cs  LinkUpPropertyGetResponse.cs  LinkUpPropertySetRequest.cs
src/LinkUp.Shared/Node/: LinkUpEventFireRequest.cs  LinkUpEventFireResponse.cs  LinkUpEventLabel.cs  LinkUpEventSubscribeRequest.cs  LinkUpEventSubscribeResponse.cs  LinkUpEventUnsubscribeRequest.cs  LinkUpEventUnsubscribeResponse.cs  LinkUpFunctionLabel.cs  LinkUpLabel.cs  LinkUpLabelType.cs  LinkUpLogic.cs  LinkUpLogicType.cs  LinkUpNameRequest.cs  LinkUpNameResponse.cs  LinkUpNode.cs  LinkUpPingRequest.cs  LinkUpPingResponse.cs  LinkUpPrimitiveLabel.cs  LinkUpPropertyGetRequest.cs  LinkUpPropertyGetResponse.cs  LinkUpPropertyLabel.cs  LinkUpPropertySetRequest.cs  LinkUpPropertySetResponse.cs  LinkUpPropertyType.cs  LinkUpSubNode.cs  LinkUpType.cs
src/LinkUp.Shared/Node/Logic/: LinkUpEventFireRequest.cs  LinkUpEventSubscribeRequest.cs  LinkUpEventUnsubscribeRequest.cs  LinkUpFunctionCallRequest.cs  (+10 more)
src/LinkUp.Shared/Raw/: LinkUpBytesPerSecondCounter.cs  LinkUpConnector.cs  LinkUpConverter.cs  LinkUpMemoryConnector.cs  LinkUpNamedPipeConnector.cs  LinkUpPacket.cs  LinkUpSerialPortConnector.cs  LinkUpTcpClientConnector.cs  LinkUpTcpConnector.cs  LinkUpUdpConnector.cs
src/Testing/LinkUp.Testing.Arduino/: Testing.vcxproj
src/Testing/LinkUp.Testing.Net45/: LinkUp.Testing.Net45.csproj
src/Testing/RawConsoleLogger/: Program.cs  RawConsoleLogger.csproj
(+126 files in other folders)
